--- a/pixiv-width-patch.user.css
+++ b/pixiv-width-patch.user.css
@@ -3,7 +3,7 @@
 @namespace   koumaza
 @version     1.0.0
 @homepageURL https://github.com/koumaza/pixiv-width-patch.git
-@updateURL   
+@updateURL   https://raw.githubusercontent.com/koumaza/pixiv-width-patch/master/pixiv-width-patch.user.css
 @license     WTFPL(PublicDomain)
 @author      koumaza
 ==/UserStyle== */
